--- a/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
+++ b/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
@@ -19,7 +19,7 @@
     &lt;div class=&quot;form-element text-el hanke-title&quot;&gt;
       &lt;div class=&quot;content-item&quot;&gt;
         &lt;label for=&quot;text-field&quot;&gt;Otsikko tai nimi*&lt;/label&gt;
-        &lt;input placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n otsikko tai nimi...&quot; maxlength=&quot;130&quot; value=&quot;Hankkeen nimi Lorem ipsum dolor sit met&quot; /&gt;
+        &lt;input id=&quot;tbName&quot; placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n otsikko tai nimi...&quot; maxlength=&quot;130&quot; value=&quot;&quot; /&gt;
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class=&quot;hanke-form&quot;&gt;
@@ -28,7 +28,7 @@
           &lt;span class=&quot;icon-help&quot; title=&quot;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&quot; placement=&quot;top&quot;&gt;Lyhyt linkki&lt;/span&gt;
           &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
         &lt;/div&gt;
-        &lt;input maxlength=&quot;130&quot; /&gt;
+        &lt;input maxlength=&quot;130&quot; data-source=&quot;tbName&quot; data-type=&quot;shortcut&quot; /&gt;
       &lt;/div&gt;
       &lt;div class=&quot;form-element text-el content-item large&quot;&gt;
         &lt;div class=&quot;helper-container&quot;&gt;
@@ -129,46 +129,42 @@
       &lt;!-- Optional field those will be fadeout --&gt;
       &lt;div class=&quot;fadeout clickable&quot;&gt;
         &lt;div id=&quot;hanke-attachments&quot; class=&quot;content-item large&quot;&gt;
-          &lt;h3&gt;Liitteet&lt;/h3&gt;
-          &lt;div id=&quot;hanke-add-attachment&quot;&gt;
-            &lt;form action=&quot;&quot; class=&quot;attachment-form&quot;&gt;
-              &lt;div class=&quot;form-element attachment-container&quot;&gt;
-                &lt;label for=&quot;upload-file&quot; class=&quot;upload-file-button&quot;&gt;Lis&Atilde;&curren;&Atilde;&curren; tiedosto&lt;/label&gt;
-                &lt;input type=&quot;file&quot; id=&quot;upload-file&quot; /&gt;
-              &lt;/div&gt;
-            &lt;/form&gt;
-          &lt;/div&gt;
+          &lt;h3&gt;Liitteet&lt;/h3&gt;          
           &lt;!-- Hanke attachment list --&gt;
-          &lt;div id=&quot;hanke-attachment-list&quot;&gt;
-            &lt;div class=&quot;attachment-form inline-element&quot;&gt;
-              &lt;div class=&quot;form-element attachment-edit&quot;&gt;
-                &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
-                &lt;div class=&quot;mime-container&quot;&gt;
-                  &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
-                &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
+          &lt;div class=&quot;attachment-form inline-element&quot;&gt;
+            &lt;div class=&quot;form-element attachment-edit&quot;&gt;
+              &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
+              &lt;div class=&quot;mime-container&quot;&gt;
+                &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
               &lt;/div&gt;
+              &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
+              &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
             &lt;/div&gt;
-            &lt;div class=&quot;attachment-form inline-element&quot;&gt;
-              &lt;div class=&quot;form-element attachment-edit&quot;&gt;
-                &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
-                &lt;div class=&quot;mime-container&quot;&gt;
-                  &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
-                &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;attachment-form inline-element&quot;&gt;
+            &lt;div class=&quot;form-element attachment-edit&quot;&gt;
+              &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
+              &lt;div class=&quot;mime-container&quot;&gt;
+                &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
               &lt;/div&gt;
+              &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
+              &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
             &lt;/div&gt;
-            &lt;div class=&quot;attachment-form inline-element&quot;&gt;
-              &lt;div class=&quot;form-element attachment-edit&quot;&gt;
-                &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
-                &lt;div class=&quot;mime-container&quot;&gt;
-                  &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
-                &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;attachment-form inline-element&quot;&gt;
+            &lt;div class=&quot;form-element attachment-edit&quot;&gt;
+              &lt;label class=&quot;edit-file-button&quot;&gt;muokkaa&lt;/label&gt;
+              &lt;div class=&quot;mime-container&quot;&gt;
+                &lt;i class=&quot;fa fa-file-o&quot;&gt;&lt;/i&gt;
               &lt;/div&gt;
+              &lt;a class=&quot;file-title&quot;&gt;Otsikko&lt;/a&gt;
+              &lt;p&gt;tiedostonimi...jpg&lt;/p&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;attachment-form inline-element&quot;&gt;
+            &lt;div class=&quot;form-element attachment-container&quot;&gt;
+              &lt;label for=&quot;upload-file&quot; class=&quot;upload-file-button&quot;&gt;Lis&Atilde;&curren;&Atilde;&curren; tiedosto&lt;/label&gt;
+              &lt;input type=&quot;file&quot; id=&quot;upload-file&quot; /&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
