Carousel icons fixed

--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -315,7 +315,7 @@
                 <span class="icon-help" title="lisää käyttäjänimiä tai sähköpostiosoitteita" placement="top">Kenelle</span>
                 <p class="helper-text small is-vishidden">lisää käyttäjänimiä tai sähköpostiosoitteita</p>
               </div>
-              <input type="text" />
+              <input type="text" class="person-list" />
             </div>
             <div class="form-element">
               <div class="helper-container">
