--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,4 +1,7 @@
+	<script type="text/javascript" src="../../js/jquery-2.0.0b2.js"></script>
+	<!--
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	-->
 	<script type="text/javascript" src="../../js/modernizr.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
