--- a/source/css/scss/objects/_carousels.scss
+++ b/source/css/scss/objects/_carousels.scss
@@ -99,10 +99,18 @@
 	font-size: 24px;
 	text-align: center;
 	margin-top: -20px;
-	opacity: 0.66;
+	opacity: 0.9;
 	position: absolute;
 	top: 50%;
 	left: 15px;
+
+	&:before{
+		font-size: 26px;
+		width: 24px;
+		display: inline-block;
+		vertical-align: sub;
+		line-height: 29px !important;
+		}
 
 	&.right
 	{
@@ -128,14 +136,29 @@
 	&.left::before {
 		font-family: ok-icons;
 		content: "\E117";
-	}	
+	}
 
 	&:hover, &:focus
 	{
 		color: #FFFFFF;
-		opacity: 0.9;
+		opacity: 1;
 		text-decoration: none;
 	}
+}
+.inverse-color {
+	color: $gray-dark;
+	li.active:before{
+		color: $gray-dark;
+	}
+	li:before{
+		color: $gray-med;
+
+		-webkit-transition: all 0.30s ease-in-out;
+		-moz-transition: all 0.30s ease-in-out;
+		-ms-transition: all 0.30s ease-in-out;
+		-o-transition: all 0.30s ease-in-out;
+	}
+	&:hover{ color: $gray-dark; opacity: 1; }
 }
 
 .carousel-indicators
@@ -144,34 +167,36 @@
 	margin: -30px auto 0;
 	position: relative;
 	z-index: 5;
-	height: 10px;
+	height: auto;
 	width: 30%;
 	vertical-align: middle;
 	background-color: transparent;
 	text-align: center;
 	font-size: 24px;
-	
+
 	li
 	{
 		display: inline-block;
 		cursor: pointer;
 		float: none;
 		margin-left: 0.5em;
-	}	
-	li::before {
+		text-align: center;
+	}
+
+	li:before {
 		font-family: ok-icons;
 		content: "\E096";
+		display: inline-block;
+		vertical-align: bottom;
+		line-height: 29px;
+		width: 25px;
 	}
-	 
-	.active
-	{
-		background-color: $gray-light;
-	}
+
 	.active::before {
 		font-family: ok-icons;
 		color:white;
 		content: "\E096";
-	}	
+	}
 }
 .carousel-caption
 {
