added white class for btn

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -67,6 +67,13 @@
 		}
 	}
 
+	&.white{
+		background-color: $white;
+		&:hover, &:focus{
+			background-color: $white;
+		}
+	}
+
 	& i{
 		display: inline-block;
 		vertical-align: middle;
