--- a/source/css/scss/objects/_text.scss
+++ b/source/css/scss/objects/_text.scss
@@ -74,7 +74,7 @@ $fadeout-space: 70px;
 		padding-bottom: 10px;
 	}
 
-	.read-more{		
+	.read-more{
 		position: absolute;
 		bottom: 0;
 		margin-bottom: 0;
@@ -101,15 +101,15 @@ $fadeout-space: 70px;
 			&.pt-fix{
 				top: 0;
 			}
-			
+
 			&:before {
 				@extend .om-small_arrow_down;
 				font-size: 24px;
 				position: absolute;
 				right: -4px;
-				top: -2px;
+				top: 0;
 			}
-		}		
+		}
 	}
 }
 
