--- a/source/css/scss/objects/_text.scss
+++ b/source/css/scss/objects/_text.scss
@@ -126,8 +126,9 @@ $fadeout-space: 70px;
 			color: $text-color;
 			font-size: 1.25em;
 			display: inline-block;
-			padding-top: $pad-quarter;
+			padding-top: 0.15em;
 			vertical-align: top;
+			line-height: 24px;
 		}
 	}
 	.helper-text{
