icons font-size fix

--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -118,11 +118,11 @@
 	li { width: 180px; line-height: 35px; clear: both; }
 	i { float: right; }
 }
-.icons i{ margin: 0 10px; }
+.icons i{ margin: 0 10px; font-size: 24px; }
 .icons li{ line-height: 2; }
 
 .fa{ font-family: FontAwesome; }
-.om{ font-family: ok-icons; font-size: 24px; }
+.om{ font-family: ok-icons; }
 
 .footer .om:before{
 	vertical-align: sub;
