Hankelista read mode: layout tweaks, header full width (global change), background colors changed and more flexible tables (global with a class)

--- a/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
+++ b/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
@@ -97,7 +97,7 @@
             &lt;div class=&quot;fadeout&quot;&gt;
               &lt;p class=&quot;ingressi&quot;&gt;Hankkeen kuvausteksti t&auml;nne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.&lt;/p&gt;
               &lt;p class=&quot;read-more&quot;&gt;
-                &lt;i class=&quot;om-small_arrow_down size-l&quot;&gt;&lt;/i&gt; &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;some-buttons inline-element&quot;&gt;
@@ -139,114 +139,116 @@
               &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;Lorem ipsum&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;fadeout&quot;&gt;
-              &lt;table class=&quot;table-borderless&quot;&gt;
-                &lt;thead&gt;
-                  &lt;tr&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;
-                      Seuraa
-                      &lt;span&gt;&lt;/span&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      On osallistunut
-                      &lt;span&gt;&lt;/span&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      Vastuuhenkil&ouml;
-                      &lt;span&gt;&lt;/span&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      Ohjaaja
-                      &lt;span&gt;&lt;/span&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      Kutsuttu
-                      &lt;span&gt;&lt;/span&gt;
-                    &lt;/td&gt;
-                  &lt;/tr&gt;
-                &lt;/thead&gt;
-                &lt;tbody&gt;
-                  &lt;tr&gt;
-                    &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                  &lt;/tr&gt;
-                  &lt;tr&gt;
-                    &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;Matti Meik&auml;l&auml;inen&lt;/a&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                  &lt;/tr&gt;
-                  &lt;tr&gt;
-                    &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;Jaska Jokunen&lt;/a&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                  &lt;/tr&gt;
-                  &lt;tr&gt;
-                    &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;Oskari Olematon&lt;/a&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                  &lt;/tr&gt;
-                  &lt;tr&gt;
-                    &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;David Hasselhoff&lt;/a&gt;
-                    &lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;&lt;/td&gt;
-                    &lt;td&gt;
-                      X
-                    &lt;/td&gt;
-                  &lt;/tr&gt;
-                &lt;/tbody&gt;
-              &lt;/table&gt;
+              &lt;div class=&quot;scrollable-table-wrapper&quot;&gt;
+                &lt;table class=&quot;table-borderless&quot;&gt;
+                  &lt;thead&gt;
+                    &lt;tr&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;
+                        Seuraa
+                        &lt;span&gt;&lt;/span&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        On osallistunut
+                        &lt;span&gt;&lt;/span&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        Vastuuhenkil&ouml;
+                        &lt;span&gt;&lt;/span&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        Ohjaaja
+                        &lt;span&gt;&lt;/span&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        Kutsuttu
+                        &lt;span&gt;&lt;/span&gt;
+                      &lt;/td&gt;
+                    &lt;/tr&gt;
+                  &lt;/thead&gt;
+                  &lt;tbody&gt;
+                    &lt;tr&gt;
+                      &lt;td class=&quot;left&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                      &lt;td class=&quot;left&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;Matti Meik&auml;l&auml;inen&lt;/a&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                      &lt;td class=&quot;left&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;Jaska Jokunen&lt;/a&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                      &lt;td class=&quot;left&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;Oskari Olematon&lt;/a&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                      &lt;td class=&quot;left&quot;&gt;
+                        &lt;a href=&quot;#&quot;&gt;David Hasselhoff&lt;/a&gt;
+                      &lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;&lt;/td&gt;
+                      &lt;td&gt;
+                        X
+                      &lt;/td&gt;
+                    &lt;/tr&gt;
+                  &lt;/tbody&gt;
+                &lt;/table&gt;
+              &lt;/div&gt;
               &lt;p class=&quot;read-more&quot;&gt;
                 &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;gi-ext&quot;&gt;
+        &lt;div class=&quot;gi-ext hanke-sidebar&quot;&gt;
           &lt;!-- perustiedot --&gt;
           &lt;div class=&quot;content-item large&quot;&gt;
             &lt;h2&gt;
@@ -260,51 +262,53 @@
                 &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
-            &lt;table class=&quot;table-borderless narrow&quot;&gt;
-              &lt;tbody&gt;
-                &lt;tr&gt;
-                  &lt;th&gt;Vastuutaho&lt;/th&gt;
-                  &lt;td colspan=&quot;2&quot;&gt;Lorem Ipsum&lt;/td&gt;
-                &lt;/tr&gt;
-                &lt;tr&gt;
-                  &lt;th&gt;Hanke luotu&lt;/th&gt;
-                  &lt;td colspan=&quot;2&quot;&gt;
-                    &lt;span class=&quot;date&quot;&gt;23.10.2012&lt;/span&gt;
-                    &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
-                  &lt;/td&gt;
-                &lt;/tr&gt;
-                &lt;tr&gt;
-                  &lt;th&gt;Hanke muokattu&lt;/th&gt;
-                  &lt;td colspan=&quot;2&quot;&gt;
-                    &lt;span class=&quot;date&quot;&gt;3.4.2014 8:38:05&lt;/span&gt;
-                    &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
-                  &lt;/td&gt;
-                &lt;/tr&gt;
-                &lt;tr&gt;
-                  &lt;th&gt;Liitteet&lt;/th&gt;
-                  &lt;td class=&quot;table-cell-list&quot;&gt;
-                    &lt;h4&gt;Nimi&lt;/h4&gt;
-                    &lt;a href=&quot;#&quot;&gt;test2.txt&lt;/a&gt;
-                  &lt;/td&gt;
-                  &lt;td class=&quot;table-cell-list&quot;&gt;
-                    &lt;h4&gt;Kuvaus&lt;/h4&gt;
-                    &lt;p&gt;Liitteen kuvausteksti&lt;/p&gt;
-                  &lt;/td&gt;
-                &lt;/tr&gt;
-                &lt;tr&gt;
-                  &lt;th&gt;Linkit&lt;/th&gt;
-                  &lt;td&gt;
-                    &lt;ul&gt;
-                      &lt;li&gt;
-                        &lt;a href=&quot;#&quot;&gt;Google&lt;/a&gt;
-                      &lt;/li&gt;
-                    &lt;/ul&gt;
-                  &lt;/td&gt;
-                &lt;/tr&gt;
-              &lt;/tbody&gt;
-            &lt;/table&gt;
+             &lt;div class=&quot;scrollable-table-wrapper&quot;&gt;
+              &lt;table class=&quot;table-borderless narrow&quot;&gt;
+                &lt;tbody&gt;
+                  &lt;tr&gt;
+                    &lt;th&gt;Vastuutaho&lt;/th&gt;
+                    &lt;td colspan=&quot;2&quot;&gt;Lorem Ipsum&lt;/td&gt;
+                  &lt;/tr&gt;
+                  &lt;tr&gt;
+                    &lt;th&gt;Hanke luotu&lt;/th&gt;
+                    &lt;td colspan=&quot;2&quot;&gt;
+                      &lt;span class=&quot;date&quot;&gt;23.10.2012&lt;/span&gt;
+                      &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
+                    &lt;/td&gt;
+                  &lt;/tr&gt;
+                  &lt;tr&gt;
+                    &lt;th&gt;Hanke muokattu&lt;/th&gt;
+                    &lt;td colspan=&quot;2&quot;&gt;
+                      &lt;span class=&quot;date&quot;&gt;3.4.2014 8:38:05&lt;/span&gt;
+                      &lt;a href=&quot;#&quot;&gt;Mikko Mallikas&lt;/a&gt;
+                    &lt;/td&gt;
+                  &lt;/tr&gt;
+                  &lt;tr&gt;
+                    &lt;th&gt;Liitteet&lt;/th&gt;
+                    &lt;td class=&quot;table-cell-list&quot;&gt;
+                      &lt;h4&gt;Nimi&lt;/h4&gt;
+                      &lt;a href=&quot;#&quot;&gt;test2.txt&lt;/a&gt;
+                    &lt;/td&gt;
+                    &lt;td class=&quot;table-cell-list&quot;&gt;
+                      &lt;h4&gt;Kuvaus&lt;/h4&gt;
+                      &lt;p&gt;Liitteen kuvausteksti&lt;/p&gt;
+                    &lt;/td&gt;
+                  &lt;/tr&gt;
+                  &lt;tr&gt;
+                    &lt;th&gt;Linkit&lt;/th&gt;
+                    &lt;td&gt;
+                      &lt;ul&gt;
+                        &lt;li&gt;
+                          &lt;a href=&quot;#&quot;&gt;Google&lt;/a&gt;
+                        &lt;/li&gt;
+                      &lt;/ul&gt;
+                    &lt;/td&gt;
+                  &lt;/tr&gt;
+                &lt;/tbody&gt;
+              &lt;/table&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
-          
+
           &lt;!-- kutsu --&gt;
           &lt;div class=&quot;content-item large invitation&quot;&gt;
             &lt;h3&gt;
@@ -328,7 +332,7 @@
             &lt;div class=&quot;sidebar-form-errors&quot;&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          
+
           &lt;div class=&quot;content-item large&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h4&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Asiasanat ja paikkakunnat&lt;/span&gt;
