--- a/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
+++ b/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
@@ -14,16 +14,18 @@
       &lt;/div&gt;
       &lt;div class=&quot;list-lift&quot;&gt;
         &lt;div class=&quot;navigation&quot;&gt;
-          &lt;div class=&quot;btn-group enlarged&quot;&gt;
-            &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;
-              Vaikuta&lt;span class=&quot;count&quot;&gt;42&lt;/span&gt;
-            &lt;/a&gt;
-            &lt;a href=&quot;#&quot;&gt;Muiden suosimat&lt;/a&gt;
-            &lt;a href=&quot;#&quot;&gt;Viel&auml; ehdit&lt;/a&gt;
-            &lt;a href=&quot;#&quot;&gt;Omat valinnat&lt;/a&gt;
-            &lt;a href=&quot;#&quot;&gt;
-              Tulokset&lt;span class=&quot;count&quot;&gt;172&lt;/span&gt;
-            &lt;/a&gt;
+          &lt;div class=&quot;btn-group-wrapper&quot;&gt;
+            &lt;div class=&quot;btn-group enlarged&quot;&gt;
+              &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;
+                Vaikuta&lt;span class=&quot;count&quot;&gt;42&lt;/span&gt;
+              &lt;/a&gt;
+              &lt;a href=&quot;#&quot;&gt;Muiden suosimat&lt;/a&gt;
+              &lt;a href=&quot;#&quot;&gt;Viel&auml; ehdit&lt;/a&gt;
+              &lt;a href=&quot;#&quot;&gt;Omat valinnat&lt;/a&gt;
+              &lt;a href=&quot;#&quot;&gt;
+                Tulokset&lt;span class=&quot;count&quot;&gt;172&lt;/span&gt;
+              &lt;/a&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
           &lt;div class=&quot;tag-search-container&quot;&gt;
             {{&gt; atoms-tagit }}
