Added float for hankelist page btn-group-wrapper and float none under 600px

--- a/source/_patterns/04-pages/05-hankelist-page.mustache
+++ b/source/_patterns/04-pages/05-hankelist-page.mustache
@@ -14,7 +14,7 @@
       </div>
       <div class="list-lift">
         <div class="navigation">
-          <div class="btn-group-wrapper">
+          <div class="btn-group-wrapper float-left">
             <div class="btn-group enlarged">
               <a href="#" class="active">
                 Vaikuta<span class="count">42</span>
