--- a/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
+++ b/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
@@ -14,7 +14,7 @@
       &lt;/div&gt;
       &lt;div class=&quot;list-lift&quot;&gt;
         &lt;div class=&quot;navigation&quot;&gt;
-          &lt;div class=&quot;btn-group-wrapper&quot;&gt;
+          &lt;div class=&quot;btn-group-wrapper float-left&quot;&gt;
             &lt;div class=&quot;btn-group enlarged&quot;&gt;
               &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;
                 Vaikuta&lt;span class=&quot;count&quot;&gt;42&lt;/span&gt;
