fixed font family from .om to .om pseudo elements because it caused problems in footer fonts. possibly fixed some other problems in footer icons too.

--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -122,7 +122,7 @@
 .icons li{ line-height: 2; }
 
 .fa{ font-family: FontAwesome; }
-.om{ font-family: ok-icons; }
+.om:before, .om:after{ font-family: ok-icons; }
 
 .footer .om:before{
 	vertical-align: sub;
