--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -1,4 +1,3 @@
-
 @font-face {
 	font-family: ok-icons;
 	src:url("../fonts/Democracy_Glyphs_1.042.eot");
@@ -7,6 +6,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
@@ -115,7 +115,7 @@
 
 // Customs
 .icons.icons-compare{
-	li { width: 180px; line-height: 35px; clear: both; }
+	li { max-width: 280px; line-height: 35px; clear: both; }
 	i { float: right; }
 }
 .icons i{ margin: 0 10px; font-size: 24px; }
