--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -9,9 +9,9 @@
 @media screen and (max-width: 370px){
 	.header.loggedin{
 		.search-form {
-			max-width: 40%;
+			max-width: 47%;
 
-			.form-element{ margin-left: 30px; }
+			.form-element{ margin-left: 25px; }
 
 			.search-field {
 				padding-right: 1.5em;
@@ -25,7 +25,7 @@
 	position: relative;
 	padding: 0;
 	width: 100%;
-	overflow: hidden;
+
 
 	.element-group{
 		width: 100%;
@@ -51,6 +51,7 @@
 			&:nth-child(3){
 				position: absolute;
 				top: 0;
+				width: 98%;
 			}
 		}
 
@@ -79,6 +80,7 @@
 		position: static;
 		padding-left: 12px;
 		padding-right: 12px;
+
 		@extend .lc;
 
 		@media #{$tablet}{
@@ -93,9 +95,7 @@
 		position: absolute;
 		max-width: 100%;
 
-		@media screen and (max-width: 340px){
-			max-width: 60%;
-		}
+
 
 		@media #{$tablet}{
 			width: 50%;
@@ -112,6 +112,13 @@
 
 		.search-field{
 			padding-right: 2em;
+		}
+		@media screen and (max-width: 340px){
+			max-width: 50%;
+
+			.form-element{
+				margin-left: 25px;
+			}
 		}
 	}
 }
