--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -80,7 +80,6 @@
 		position: static;
 		padding-left: 12px;
 		padding-right: 12px;
-
 		@extend .lc;
 
 		@media #{$tablet}{
@@ -95,8 +94,6 @@
 		position: absolute;
 		max-width: 100%;
 
-
-
 		@media #{$tablet}{
 			width: 50%;
 			right: 10px;
@@ -105,7 +102,7 @@
 		@media #{$laptop}{ padding: 31px 0; }
 
 		.form-element{
-			margin: 0 0 0 40px;
+			margin: 0 0 0 25px;
 			position: relative;
 			z-index: 1;
 		}
@@ -115,10 +112,6 @@
 		}
 		@media screen and (max-width: 340px){
 			max-width: 50%;
-
-			.form-element{
-				margin-left: 25px;
-			}
 		}
 	}
 }
@@ -139,6 +132,10 @@
 
 	@media #{$laptop}{
 		font-size: 2.6em;
+	}
+
+	@media screen and (max-width: 370px){
+		font-size: 1.6em;
 	}
 
 	&:hover{
@@ -181,6 +178,9 @@
 
 			@media #{$laptop}{
 				line-height: 100px;
+			}
+			@media screen and (max-width: 370px){
+				line-height: 68px;
 			}
 
 			a{ color: $blue; text-decoration: none; }
@@ -238,11 +238,11 @@
 
 		@media #{$tablet}{
 			display: inline-block;
-			padding: 0 13px 3px;
+			padding: 0 14px 3px;
 			margin: 8px 4px 0 0;
 		}
 		@media #{$laptop}{
-			padding: 0 10px 3px;
+			padding: 0 20px 3px;
 			margin: 8px 8px 0 0;
 		}
 	}
@@ -250,6 +250,10 @@
 
 	.main-login .input-with-icon{
 		margin-top: 10px;
+	}
+	.input-with-icon:before{
+		z-index: 1;
+		top: 10px;
 	}
 
 	.section{
