--- a/source/css/scss/objects/_generated-icons.scss
+++ b/source/css/scss/objects/_generated-icons.scss
@@ -9,7 +9,17 @@
 	@extend .om;
 }
 
+.icon-om-share:before {
+	content: "\e600";
+	@extend .om;
+}
+
 .om-_422:before {
+	content: "\e601";
+	@extend .om;
+}
+
+.icon-om-_422:before {
 	content: "\e601";
 	@extend .om;
 }
@@ -19,7 +29,17 @@
 	@extend .om;
 }
 
+.icon-om-_423:before {
+	content: "\e602";
+	@extend .om;
+}
+
 .om-_424:before {
+	content: "\e603";
+	@extend .om;
+}
+
+.icon-om-_424:before {
 	content: "\e603";
 	@extend .om;
 }
@@ -29,7 +49,17 @@
 	@extend .om;
 }
 
+.icon-om-_425:before {
+	content: "\e604";
+	@extend .om;
+}
+
 .om-_426:before {
+	content: "\e605";
+	@extend .om;
+}
+
+.icon-om-_426:before {
 	content: "\e605";
 	@extend .om;
 }
@@ -39,7 +69,17 @@
 	@extend .om;
 }
 
+.icon-om-_427:before {
+	content: "\e606";
+	@extend .om;
+}
+
 .om-_428:before {
+	content: "\e607";
+	@extend .om;
+}
+
+.icon-om-_428:before {
 	content: "\e607";
 	@extend .om;
 }
@@ -49,7 +89,17 @@
 	@extend .om;
 }
 
+.icon-om-_429:before {
+	content: "\e608";
+	@extend .om;
+}
+
 .om-angle_down_circle:before {
+	content: "\e609";
+	@extend .om;
+}
+
+.icon-om-angle_down_circle:before {
 	content: "\e609";
 	@extend .om;
 }
@@ -59,7 +109,17 @@
 	@extend .om;
 }
 
+.icon-om-angle_down:before {
+	content: "\e60a";
+	@extend .om;
+}
+
 .om-angle_left_circle:before {
+	content: "\e60b";
+	@extend .om;
+}
+
+.icon-om-angle_left_circle:before {
 	content: "\e60b";
 	@extend .om;
 }
@@ -69,7 +129,17 @@
 	@extend .om;
 }
 
+.icon-om-angle_left:before {
+	content: "\e60c";
+	@extend .om;
+}
+
 .om-angle_right_circle:before {
+	content: "\e60d";
+	@extend .om;
+}
+
+.icon-om-angle_right_circle:before {
 	content: "\e60d";
 	@extend .om;
 }
@@ -79,7 +149,17 @@
 	@extend .om;
 }
 
+.icon-om-angle_right:before {
+	content: "\e60e";
+	@extend .om;
+}
+
 .om-angle_up_circle:before {
+	content: "\e60f";
+	@extend .om;
+}
+
+.icon-om-angle_up_circle:before {
 	content: "\e60f";
 	@extend .om;
 }
@@ -89,7 +169,17 @@
 	@extend .om;
 }
 
+.icon-om-angle_up:before {
+	content: "\e610";
+	@extend .om;
+}
+
 .om-avatar_circle:before {
+	content: "\e611";
+	@extend .om;
+}
+
+.icon-om-avatar_circle:before {
 	content: "\e611";
 	@extend .om;
 }
@@ -99,7 +189,17 @@
 	@extend .om;
 }
 
+.icon-om-avatar_outline:before {
+	content: "\e612";
+	@extend .om;
+}
+
 .om-avatar_shield:before {
+	content: "\e613";
+	@extend .om;
+}
+
+.icon-om-avatar_shield:before {
 	content: "\e613";
 	@extend .om;
 }
@@ -109,7 +209,17 @@
 	@extend .om;
 }
 
+.icon-om-avatar:before {
+	content: "\e614";
+	@extend .om;
+}
+
 .om-bars:before {
+	content: "\e615";
+	@extend .om;
+}
+
+.icon-om-bars:before {
 	content: "\e615";
 	@extend .om;
 }
@@ -119,7 +229,17 @@
 	@extend .om;
 }
 
+.icon-om-box_blank:before {
+	content: "\e616";
+	@extend .om;
+}
+
 .om-business:before {
+	content: "\e617";
+	@extend .om;
+}
+
+.icon-om-business:before {
 	content: "\e617";
 	@extend .om;
 }
@@ -129,7 +249,17 @@
 	@extend .om;
 }
 
+.icon-om-caret_down_sign:before {
+	content: "\e618";
+	@extend .om;
+}
+
 .om-caret_down:before {
+	content: "\e619";
+	@extend .om;
+}
+
+.icon-om-caret_down:before {
 	content: "\e619";
 	@extend .om;
 }
@@ -139,7 +269,17 @@
 	@extend .om;
 }
 
+.icon-om-caret_left_sign:before {
+	content: "\e61a";
+	@extend .om;
+}
+
 .om-caret_left:before {
+	content: "\e61b";
+	@extend .om;
+}
+
+.icon-om-caret_left:before {
 	content: "\e61b";
 	@extend .om;
 }
@@ -149,7 +289,17 @@
 	@extend .om;
 }
 
+.icon-om-caret_right_sign:before {
+	content: "\e61c";
+	@extend .om;
+}
+
 .om-caret_right:before {
+	content: "\e61d";
+	@extend .om;
+}
+
+.icon-om-caret_right:before {
 	content: "\e61d";
 	@extend .om;
 }
@@ -159,7 +309,17 @@
 	@extend .om;
 }
 
+.icon-om-caret_up_sign:before {
+	content: "\e61e";
+	@extend .om;
+}
+
 .om-caret_up:before {
+	content: "\e61f";
+	@extend .om;
+}
+
+.icon-om-caret_up:before {
 	content: "\e61f";
 	@extend .om;
 }
@@ -169,7 +329,17 @@
 	@extend .om;
 }
 
+.icon-om-chat_circle:before {
+	content: "\e620";
+	@extend .om;
+}
+
 .om-chat:before {
+	content: "\e621";
+	@extend .om;
+}
+
+.icon-om-chat:before {
 	content: "\e621";
 	@extend .om;
 }
@@ -179,7 +349,17 @@
 	@extend .om;
 }
 
+.icon-om-circle_arrow_down:before {
+	content: "\e622";
+	@extend .om;
+}
+
 .om-circle_arrow_left:before {
+	content: "\e623";
+	@extend .om;
+}
+
+.icon-om-circle_arrow_left:before {
 	content: "\e623";
 	@extend .om;
 }
@@ -189,7 +369,17 @@
 	@extend .om;
 }
 
+.icon-om-circle_arrow_right:before {
+	content: "\e624";
+	@extend .om;
+}
+
 .om-circle_arrow_up:before {
+	content: "\e625";
+	@extend .om;
+}
+
+.icon-om-circle_arrow_up:before {
 	content: "\e625";
 	@extend .om;
 }
@@ -199,7 +389,17 @@
 	@extend .om;
 }
 
+.icon-om-circle_blank:before {
+	content: "\e626";
+	@extend .om;
+}
+
 .om-circle_search:before {
+	content: "\e627";
+	@extend .om;
+}
+
+.icon-om-circle_search:before {
 	content: "\e627";
 	@extend .om;
 }
@@ -209,7 +409,17 @@
 	@extend .om;
 }
 
+.icon-om-clock:before {
+	content: "\e628";
+	@extend .om;
+}
+
 .om-code:before {
+	content: "\e629";
+	@extend .om;
+}
+
+.icon-om-code:before {
 	content: "\e629";
 	@extend .om;
 }
@@ -219,7 +429,17 @@
 	@extend .om;
 }
 
+.icon-om-copy:before {
+	content: "\e62a";
+	@extend .om;
+}
+
 .om-discussion_circle:before {
+	content: "\e62b";
+	@extend .om;
+}
+
+.icon-om-discussion_circle:before {
 	content: "\e62b";
 	@extend .om;
 }
@@ -229,7 +449,17 @@
 	@extend .om;
 }
 
+.icon-om-document_circle:before {
+	content: "\e62c";
+	@extend .om;
+}
+
 .om-double_angle_down:before {
+	content: "\e62d";
+	@extend .om;
+}
+
+.icon-om-double_angle_down:before {
 	content: "\e62d";
 	@extend .om;
 }
@@ -239,7 +469,17 @@
 	@extend .om;
 }
 
+.icon-om-double_angle_left:before {
+	content: "\e62e";
+	@extend .om;
+}
+
 .om-double_angle_right:before {
+	content: "\e62f";
+	@extend .om;
+}
+
+.icon-om-double_angle_right:before {
 	content: "\e62f";
 	@extend .om;
 }
@@ -249,7 +489,17 @@
 	@extend .om;
 }
 
+.icon-om-double_angle_up:before {
+	content: "\e630";
+	@extend .om;
+}
+
 .om-edit:before {
+	content: "\e631";
+	@extend .om;
+}
+
+.icon-om-edit:before {
 	content: "\e631";
 	@extend .om;
 }
@@ -259,7 +509,17 @@
 	@extend .om;
 }
 
+.icon-om-enter_sign:before {
+	content: "\e632";
+	@extend .om;
+}
+
 .om-enter:before {
+	content: "\e633";
+	@extend .om;
+}
+
+.icon-om-enter:before {
 	content: "\e633";
 	@extend .om;
 }
@@ -269,7 +529,17 @@
 	@extend .om;
 }
 
+.icon-om-exclamation_circle:before {
+	content: "\e634";
+	@extend .om;
+}
+
 .om-facebook_sign:before {
+	content: "\e635";
+	@extend .om;
+}
+
+.icon-om-facebook_sign:before {
 	content: "\e635";
 	@extend .om;
 }
@@ -279,7 +549,17 @@
 	@extend .om;
 }
 
+.icon-om-facebook:before {
+	content: "\e636";
+	@extend .om;
+}
+
 .om-file_alt:before {
+	content: "\e637";
+	@extend .om;
+}
+
+.icon-om-file_alt:before {
 	content: "\e637";
 	@extend .om;
 }
@@ -289,7 +569,17 @@
 	@extend .om;
 }
 
+.icon-om-file_small_circle:before {
+	content: "\e638";
+	@extend .om;
+}
+
 .om-file_small:before {
+	content: "\e639";
+	@extend .om;
+}
+
+.icon-om-file_small:before {
 	content: "\e639";
 	@extend .om;
 }
@@ -299,7 +589,17 @@
 	@extend .om;
 }
 
+.icon-om-file_text:before {
+	content: "\e63a";
+	@extend .om;
+}
+
 .om-file:before {
+	content: "\e63b";
+	@extend .om;
+}
+
+.icon-om-file:before {
 	content: "\e63b";
 	@extend .om;
 }
@@ -309,7 +609,17 @@
 	@extend .om;
 }
 
+.icon-om-gallup_circle:before {
+	content: "\e63c";
+	@extend .om;
+}
+
 .om-gallup:before {
+	content: "\e63d";
+	@extend .om;
+}
+
+.icon-om-gallup:before {
 	content: "\e63d";
 	@extend .om;
 }
@@ -319,7 +629,17 @@
 	@extend .om;
 }
 
+.icon-om-group_circle:before {
+	content: "\e63e";
+	@extend .om;
+}
+
 .om-group:before {
+	content: "\e63f";
+	@extend .om;
+}
+
+.icon-om-group:before {
 	content: "\e63f";
 	@extend .om;
 }
@@ -329,7 +649,17 @@
 	@extend .om;
 }
 
+.icon-om-household:before {
+	content: "\e640";
+	@extend .om;
+}
+
 .om-info_circle:before {
+	content: "\e641";
+	@extend .om;
+}
+
+.icon-om-info_circle:before {
 	content: "\e641";
 	@extend .om;
 }
@@ -339,7 +669,17 @@
 	@extend .om;
 }
 
+.icon-om-info:before {
+	content: "\e642";
+	@extend .om;
+}
+
 .om-institution:before {
+	content: "\e643";
+	@extend .om;
+}
+
+.icon-om-institution:before {
 	content: "\e643";
 	@extend .om;
 }
@@ -349,7 +689,17 @@
 	@extend .om;
 }
 
+.icon-om-iteration_circle:before {
+	content: "\e644";
+	@extend .om;
+}
+
 .om-kansalaisaloite:before {
+	content: "\e645";
+	@extend .om;
+}
+
+.icon-om-kansalaisaloite:before {
 	content: "\e645";
 	@extend .om;
 }
@@ -359,7 +709,17 @@
 	@extend .om;
 }
 
+.icon-om-keskustelu_circle:before {
+	content: "\e646";
+	@extend .om;
+}
+
 .om-keskustelu:before {
+	content: "\e647";
+	@extend .om;
+}
+
+.icon-om-keskustelu:before {
 	content: "\e647";
 	@extend .om;
 }
@@ -369,7 +729,17 @@
 	@extend .om;
 }
 
+.icon-om-kuntalaisaloite:before {
+	content: "\e648";
+	@extend .om;
+}
+
 .om-kysely_circle:before {
+	content: "\e649";
+	@extend .om;
+}
+
+.icon-om-kysely_circle:before {
 	content: "\e649";
 	@extend .om;
 }
@@ -379,7 +749,17 @@
 	@extend .om;
 }
 
+.icon-om-kysely:before {
+	content: "\e64a";
+	@extend .om;
+}
+
 .om-lausuntopalvelu_circle:before {
+	content: "\e64b";
+	@extend .om;
+}
+
+.icon-om-lausuntopalvelu_circle:before {
 	content: "\e64b";
 	@extend .om;
 }
@@ -389,7 +769,17 @@
 	@extend .om;
 }
 
+.icon-om-legal_circle:before {
+	content: "\e64c";
+	@extend .om;
+}
+
 .om-legal:before {
+	content: "\e64d";
+	@extend .om;
+}
+
+.icon-om-legal:before {
 	content: "\e64d";
 	@extend .om;
 }
@@ -399,7 +789,17 @@
 	@extend .om;
 }
 
+.icon-om-light_bulb:before {
+	content: "\e64e";
+	@extend .om;
+}
+
 .om-linkedin_sign:before {
+	content: "\e64f";
+	@extend .om;
+}
+
+.icon-om-linkedin_sign:before {
 	content: "\e64f";
 	@extend .om;
 }
@@ -409,7 +809,17 @@
 	@extend .om;
 }
 
+.icon-om-linkedin:before {
+	content: "\e650";
+	@extend .om;
+}
+
 .om-lock:before {
+	content: "\e651";
+	@extend .om;
+}
+
+.icon-om-lock:before {
 	content: "\e651";
 	@extend .om;
 }
@@ -419,7 +829,17 @@
 	@extend .om;
 }
 
+.icon-om-mail_sign:before {
+	content: "\e652";
+	@extend .om;
+}
+
 .om-mail:before {
+	content: "\e653";
+	@extend .om;
+}
+
+.icon-om-mail:before {
 	content: "\e653";
 	@extend .om;
 }
@@ -429,7 +849,17 @@
 	@extend .om;
 }
 
+.icon-om-muu_verkkopalvelu_circle:before {
+	content: "\e654";
+	@extend .om;
+}
+
 .om-muu_verkkopalvelu:before {
+	content: "\e655";
+	@extend .om;
+}
+
+.icon-om-muu_verkkopalvelu:before {
 	content: "\e655";
 	@extend .om;
 }
@@ -439,7 +869,17 @@
 	@extend .om;
 }
 
+.icon-om-ok_sign:before {
+	content: "\e656";
+	@extend .om;
+}
+
 .om-ok:before {
+	content: "\e657";
+	@extend .om;
+}
+
+.icon-om-ok:before {
 	content: "\e657";
 	@extend .om;
 }
@@ -449,7 +889,17 @@
 	@extend .om;
 }
 
+.icon-om-otakantaa:before {
+	content: "\e658";
+	@extend .om;
+}
+
 .om-paste:before {
+	content: "\e659";
+	@extend .om;
+}
+
+.icon-om-paste:before {
 	content: "\e659";
 	@extend .om;
 }
@@ -459,7 +909,17 @@
 	@extend .om;
 }
 
+.icon-om-pencil_circle:before {
+	content: "\e65a";
+	@extend .om;
+}
+
 .om-pencil:before {
+	content: "\e65b";
+	@extend .om;
+}
+
+.icon-om-pencil:before {
 	content: "\e65b";
 	@extend .om;
 }
@@ -469,7 +929,17 @@
 	@extend .om;
 }
 
+.icon-om-phone:before {
+	content: "\e65c";
+	@extend .om;
+}
+
 .om-plus_circle:before {
+	content: "\e65d";
+	@extend .om;
+}
+
+.icon-om-plus_circle:before {
 	content: "\e65d";
 	@extend .om;
 }
@@ -479,7 +949,17 @@
 	@extend .om;
 }
 
+.icon-om-plus:before {
+	content: "\e65e";
+	@extend .om;
+}
+
 .om-print:before {
+	content: "\e65f";
+	@extend .om;
+}
+
+.icon-om-print:before {
 	content: "\e65f";
 	@extend .om;
 }
@@ -489,7 +969,17 @@
 	@extend .om;
 }
 
+.icon-om-question_circle:before {
+	content: "\e660";
+	@extend .om;
+}
+
 .om-question_default:before {
+	content: "\e661";
+	@extend .om;
+}
+
+.icon-om-question_default:before {
 	content: "\e661";
 	@extend .om;
 }
@@ -499,7 +989,17 @@
 	@extend .om;
 }
 
+.icon-om-question_ring:before {
+	content: "\e662";
+	@extend .om;
+}
+
 .om-reload_sign:before {
+	content: "\e663";
+	@extend .om;
+}
+
+.icon-om-reload_sign:before {
 	content: "\e663";
 	@extend .om;
 }
@@ -509,7 +1009,17 @@
 	@extend .om;
 }
 
+.icon-om-remove_sign:before {
+	content: "\e664";
+	@extend .om;
+}
+
 .om-ring_left:before {
+	content: "\e665";
+	@extend .om;
+}
+
+.icon-om-ring_left:before {
 	content: "\e665";
 	@extend .om;
 }
@@ -519,7 +1029,17 @@
 	@extend .om;
 }
 
+.icon-om-ring_outline:before {
+	content: "\e666";
+	@extend .om;
+}
+
 .om-ring_right:before {
+	content: "\e667";
+	@extend .om;
+}
+
+.icon-om-ring_right:before {
 	content: "\e667";
 	@extend .om;
 }
@@ -529,7 +1049,17 @@
 	@extend .om;
 }
 
+.icon-om-rss_sign:before {
+	content: "\e668";
+	@extend .om;
+}
+
 .om-rss:before {
+	content: "\e669";
+	@extend .om;
+}
+
+.icon-om-rss:before {
 	content: "\e669";
 	@extend .om;
 }
@@ -539,7 +1069,17 @@
 	@extend .om;
 }
 
+.icon-om-search:before {
+	content: "\e66a";
+	@extend .om;
+}
+
 .om-save:before {
+	content: "\e66b";
+	@extend .om;
+}
+
+.icon-om-save:before {
 	content: "\e66b";
 	@extend .om;
 }
@@ -549,7 +1089,17 @@
 	@extend .om;
 }
 
+.icon-om-sign_blank:before {
+	content: "\e66c";
+	@extend .om;
+}
+
 .om-signin:before {
+	content: "\e66d";
+	@extend .om;
+}
+
+.icon-om-signin:before {
 	content: "\e66d";
 	@extend .om;
 }
@@ -559,7 +1109,17 @@
 	@extend .om;
 }
 
+.icon-om-signout:before {
+	content: "\e66e";
+	@extend .om;
+}
+
 .om-small_arrow_down:before {
+	content: "\e66f";
+	@extend .om;
+}
+
+.icon-om-small_arrow_down:before {
 	content: "\e66f";
 	@extend .om;
 }
@@ -569,7 +1129,17 @@
 	@extend .om;
 }
 
+.icon-om-small_arrow_left:before {
+	content: "\e670";
+	@extend .om;
+}
+
 .om-small_arrow_right:before {
+	content: "\e671";
+	@extend .om;
+}
+
+.icon-om-small_arrow_right:before {
 	content: "\e671";
 	@extend .om;
 }
@@ -579,7 +1149,17 @@
 	@extend .om;
 }
 
+.icon-om-small_arrow_up:before {
+	content: "\e672";
+	@extend .om;
+}
+
 .om-spinner:before {
+	content: "\e673";
+	@extend .om;
+}
+
+.icon-om-spinner:before {
 	content: "\e673";
 	@extend .om;
 }
@@ -589,7 +1169,17 @@
 	@extend .om;
 }
 
+.icon-om-star:before {
+	content: "\e674";
+	@extend .om;
+}
+
 .om-tasks:before {
+	content: "\e675";
+	@extend .om;
+}
+
+.icon-om-tasks:before {
 	content: "\e675";
 	@extend .om;
 }
@@ -599,7 +1189,17 @@
 	@extend .om;
 }
 
+.icon-om-trash:before {
+	content: "\e676";
+	@extend .om;
+}
+
 .om-twitter_box:before {
+	content: "\e677";
+	@extend .om;
+}
+
+.icon-om-twitter_box:before {
 	content: "\e677";
 	@extend .om;
 }
@@ -609,7 +1209,17 @@
 	@extend .om;
 }
 
+.icon-om-twitter:before {
+	content: "\e678";
+	@extend .om;
+}
+
 .om-uniF1C1:before {
+	content: "\e679";
+	@extend .om;
+}
+
+.icon-om-uniF1C1:before {
 	content: "\e679";
 	@extend .om;
 }
@@ -619,7 +1229,17 @@
 	@extend .om;
 }
 
+.icon-om-warning_sign_outline:before {
+	content: "\e67a";
+	@extend .om;
+}
+
 .om-warning_sign:before {
+	content: "\e67b";
+	@extend .om;
+}
+
+.icon-om-warning_sign:before {
 	content: "\e67b";
 	@extend .om;
 }
@@ -629,7 +1249,17 @@
 	@extend .om;
 }
 
+.icon-om-youtube_box:before {
+	content: "\e67c";
+	@extend .om;
+}
+
 .om-youtube:before {
+	content: "\e67d";
+	@extend .om;
+}
+
+.icon-om-youtube:before {
 	content: "\e67d";
 	@extend .om;
 }
