--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -330,6 +330,6 @@ i{
 
 /* TODO: Remove icon-help and use Democracy glyphs instead */
 .icon-help:after{
-	content:"\E063";
+	content: "\e662";
 	@extend .om;
 }
