IE fix for more icons with em sizes

--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
-		<!--[if lt IE 9]>
-			<link href="../../ie8.css" rel="stylesheet"/>
+		<!--[if IE]>
+			<link href="../../ie.css" rel="stylesheet"/>
 		<![endif]-->
 
 		<!--[if lt IE 10]>
