FIX OM Header styles: page zooming caused black bottom border on actvie nav link.

--- a/source/css/scss/objects/_om-header.scss
+++ b/source/css/scss/objects/_om-header.scss
@@ -131,8 +131,10 @@ $omHeaderNavOffset: 20px;
                 height: $omHeaderHeight;
 
                 a {
+                    box-sizing: border-box;
                     display: inline-block;
                     padding: $omHeaderPad $omHeaderPad 0 $omHeaderPad;
+                    height: $omHeaderHeight;
                     line-height: $omHeaderHeight - $omHeaderPad;
 
                     &.active {
