--- a/source/css/scss/objects/_om-footer.scss
+++ b/source/css/scss/objects/_om-footer.scss
@@ -1,3 +1,4 @@
+$omFooterFont: "PT Sans", "Trebuchet MS", Helvetica, sans-serif;
 $footerWidth: 960px;
 $footerColor: #017380;
 $footerTextColor: #fff;
@@ -13,6 +14,8 @@ $footerLogoHeight: 80px;
 
     background: $footerColor;
     color: $footerTextColor;
+
+    font-family: $omFooterFont;
     font-size: 0.9em;
 
     .container {
