--- a/source/css/scss/objects/_om-header.scss
+++ b/source/css/scss/objects/_om-header.scss
@@ -1,3 +1,4 @@
+$omHeaderFont: "PT Sans", "Trebuchet MS", Helvetica, sans-serif;
 $omHeaderHeight: 40px;
 $omHeaderTextColor: #fff;
 $omHeaderTextColorHover: #bcdade;
@@ -18,6 +19,7 @@ $omHeaderNavOffset: 20px;
     height: $omHeaderHeight;
     width: 100%;
     text-transform: uppercase;
+    font-family: $omHeaderFont;
 
     @include omGradient(#434443, #2e2f2f);
 
