Set default border-radius to dropdown-menu.

--- a/source/css/scss/objects/_om-header.scss
+++ b/source/css/scss/objects/_om-header.scss
@@ -84,6 +84,7 @@ $omHeaderNavOffset: 20px;
         width: 13em;
         box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
         text-transform: none;
+        border-radius: 0;
 
         a {
             display: block;
